2008-11-05  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #540346

	* addressbook/e-book-backend-gal.c: (start_book_view):
	Do not try to fetch contacts when not connected.

	* addressbook/e-book-backend-gal.c: (gal_reconnect), (get_contact),
	(get_contact_list), (build_contact_from_entry), (ldap_search_handler),
	(ldap_search_dtor), (start_book_view), (stop_book_view),
	(parse_page_control), (generate_cache), (authenticate_user),
	(get_supported_auth_methods), (load_source):
	Turn off debug printf-s.

2008-11-03  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS: Evolution Exchange 2.25.1 release and version bump

2008-10-14  Srinivasa Ragavan  <sragavan@novell.com>

	* camel/camel-exchange-summary.c: Include camel-db.h

2008-10-06  Srinivasa Ragavan  <sragavan@novell.com>

	* camel/camel-exchange-folder.c (class_init),
	(count_by_expression): Adapt to new camel ABI

2008-09-22  Srinivasa Ragavan  <sragavan@novell.com>

	* configure.in: Version bump for Evolution Exchange 2.25.1

2008-09-22  Matthew Barnes  <mbarnes@redhat.com>

	* camel/camel-exchange-folder (camel_exchange_folder_add_message):
	Remove unused variables unread_count and visible_count.

2008-09-22  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS, configure.in: Evolution Exchange 2.24.0 release

2008-09-15  Bharath Acharya  <abharath@novell.com>

	** Part of fix for bug #552013

	* camel/camel-exchange-folder.c
	(camel_exchange_folder_add_message): Just update the count when adding 
	messages. Also fixes the deadlock reported.

2008-09-12  Bharath Acharya  <abharath@novell.com>

	** Fix for bug #546972

	* camel/camel-exchange-folder.c: (refresh_info),
	(camel_exchange_folder_add_message):
	* camel/camel-stub-constants.h:
	* mail/mail-stub-exchange.c: (class_init),
	(refresh_folder_internal), (sync_count):
	* mail/mail-stub.c: (connection_handler):
	* mail/mail-stub.h: 
	Added SYNC_COUNT to sync up counts on the operations needed. Any 