@@ -1,3 +1,12 @@
+2008-11-20  Milan Crha  <mcrha@redhat.com>
+
+	** Part of fix for bug #558883
+
+	* camel/camel-exchange-folder.h:
+	* camel/camel-exchange-folder.c:
+	* camel/camel-exchange-store.c:
+	Revert related parts from bug #336074, which caused slow start up.
+
 2008-11-05  Milan Crha  <mcrha@redhat.com>
 
 	** Fix for bug #540346
